src/supplemental-ui/css/site-extra.css
body {
    font-family: -apple-system, BlinkMacSystemFont, "SF Hello", "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif;
}

code, pre {
    font-family: "SF Mono", Menlo, Consolas, Monaco, "Courier New", monospace, serif;
    font-size: 0.9em;
}

header .navbar, footer.footer {
    background-color: var(--color-navbar-bg);
    transition: background-color 150ms linear;
}

/**
 * navbar-top class only applies to landing page
 * (see landing-page-support.js and header-content.hbs)
 */
header .navbar.navbar-top {
    background-color: transparent;
}

.navbar-burger {
    height: 3rem;
    border-radius: 50%;
    right: 12px;
    top: 3px;
}

.navbar-burger:hover {
    background-color: rgba(255, 255, 255, 0.08);
}

.navbar-burger:focus-visible {
    outline: 2px solid white;
    outline-offset: -8px;
}

/* Make the background color slightly less intense */
.navbar-end .navbar-item.has-dropdown:hover .navbar-link, .navbar-end .navbar-link:hover, .navbar-end>a.navbar-item:hover {
    background: rgba(0, 0, 0, 0.5);
}

footer.footer {
    color: var(--color-footer-text);
}

code {
    hyphens: none;
    -webkit-hyphens: none;
    -ms-hyphens: none;
}

.small { font-size: 0.75em; }

.navigation-container {
    width: 13rem;
}

/**
 * Prevent code blocks from overriding link colors
 */
.doc a > code {
    color: var(--color-link);
}

.doc a > code:hover {
    color: var(--color-link-hover);
}

/**
 * Overrides for asciidoctor tabs
 */
.tabpanel {
    border: 0 !important;
    padding: 1.25em 0 !important;
    background-color: var(--color-background) !important;
}

.article .tablist > ul li {
    background-color: transparent;
    border-left: none;
    border-right: none;
    border-top: none;
    border-bottom-width: 5px;
    border-bottom-color: var(--color-tab-border);
    border-bottom-style: solid;
    border-radius: 4px 4px 0 0;
    font-weight: 500;
}

.article .tablist > ul li:hover, .article .tabs:not(.is-loading) .tablist li:not(.is-selected):hover {
    background-color: var(--color-tab-hover);
}

.article .tabs:not(.is-loading) .tablist li:not(.is-selected) {
    border-bottom-color: transparent;
    background-color: transparent;
    border-radius: 4px;
}

.tabs.is-loading .tablist li:first-child::after, .tabs:not(.is-loading) .tablist li.is-selected::after {
    background-color: var(--color-background) !important;
}

/**
 * Blog page styles
 */
.blog-excerpt {
    font-style: italic;
}

.blog-byline {
    color: var(--color-text-muted);
}

.blog-feed {
    margin-top: 5em;
}

.blog-feed img {
    width: 1em;
}

.toc.sidebar .toc-menu h3 {
    padding-left: calc(0.5rem + 2px);
}

